Bugs tests on ios

--- a/css/parallax.css
+++ b/css/parallax.css
@@ -103,7 +103,7 @@
 .road-sign {
     display: flex;
     align-items: center;
-    /*margin-bottom: 70px;*/
+    margin-bottom: 70px;
     height: 260px;
     width: 260px;
     background-image: url("../assets/img/yellow-road-sign-rhomb.png");
@@ -123,15 +123,12 @@
     opacity: 0;
 }
 
-.phone {
-    padding-top: 70px;
-}
-
 .phone span {
+    width: fit-content;
     font-size: 7rem;
     color: var(--orange);
     -webkit-text-fill-color: var(--orange);
-    /*-webkit-text-size-adjust: 100%;*/
+    -webkit-text-size-adjust: 100%;
 }
 
 
@@ -235,12 +232,9 @@
         letter-spacing: -1px;
     }
     .road-sign {
-        /*margin-bottom: 30px;*/
+        margin-bottom: 30px;
         height: 120px;
         width: 120px;
-    }
-    .phone {
-        padding-top: 30px;
     }
     .phone span {
         font-size: 2rem;
@@ -320,12 +314,9 @@
         font-size: 2rem;
     }
     .road-sign {
-        /*margin-bottom: 40px;*/
+        margin-bottom: 40px;
         height: 200px;
         width: 200px;
-    }
-    .phone {
-        padding-top: 40px;
     }
     .phone span {
         font-size: 4rem;
@@ -372,12 +363,9 @@
         font-size: 2rem;
     }
     .road-sign {
-        /*margin-bottom: 50px;*/
+        margin-bottom: 50px;
         height: 200px;
         width: 200px;
-    }
-    .phone {
-        padding-top: 50px;
     }
 }
 
@@ -430,13 +418,12 @@
         font-size: 1.25rem;
     }
     .road-sign {
-        /*margin-bottom: 30px;*/
+        margin-bottom: 30px;
         height: 120px;
         width: 120px;
     }
     .phone {
         align-self: center;
-        padding-top: 30px;
     }
     .phone span {
         font-size: 2rem;
@@ -467,12 +454,9 @@
         font-size: 2rem;
     }
     .road-sign {
-        /*margin-bottom: 50px;*/
+        margin-bottom: 50px;
         height: 200px;
         width: 200px;
-    }
-    .phone {
-        padding-top: 50px;
     }
     .phone span {
         font-size: 3rem;
